# projects

./: .ghci  .gitignore  .markdownlint.jsonc  0h h1 parsed.txt  0hh1parser.cpp  404.html  README.md  current_info  flake.nix  index.html  interview.cabal  package.yaml  print.html  pystat.py  repohs.cabal  report  searchindex.js  searchindex.json  stack.yaml
F22/total-virtualization/lab5/: README.md  flake.nix  pyproject.toml
F22/total-virtualization/lab5/nix-files/: settings.nix
F22/total-virtualization/lab5/src/: .env  docker-compose.yaml
F22/total-virtualization/lab5/src/consumer/: Dockerfile  requirements.txt
F22/total-virtualization/lab5/src/consumer/app/: main.py
F22/total-virtualization/lab5/src/k8s/common/: ConfigMap.yaml
F22/total-virtualization/lab5/src/k8s/consumer/: Deployment.yaml  Service.yaml
F22/total-virtualization/lab5/src/k8s/postgres/: Deployment.yaml  PersistentVolume.yaml  PersistentVolumeClaim.yaml  Service.yaml
F22/total-virtualization/lab5/src/k8s/producer/: Deployment.yaml  Service.yaml
F22/total-virtualization/lab5/src/k8s/rabbitmq/: Service.yaml  StatefulSet.yaml
F22/total-virtualization/lab5/src/postgres/: init.sql
F22/total-virtualization/lab5/src/producer/: Dockerfile
F22/total-virtualization/lab5/src/producer/app/: main.py
F22/total-virtualization/lab6/: .gitignore  README.md  docker-compose.yaml  flake.nix  pyproject.toml
F22/total-virtualization/lab6/src/: Dockerfile  main.py  requirements.txt
app/: Main.hs
blockchain/: README.md  flake.nix
cpp/: flake.nix
rescript/: README.md  flake.nix  package-lock.json  package.json  pyproject.toml
rescript/src/: App.res
(+490 files in other folders)
